Rename extension from "Video Blocker" to "Journey's Youtube Video Blocker"

--- a/views/options.html
+++ b/views/options.html
@@ -77,7 +77,7 @@
     <div class="main-container-help" style="display: none;">
 
       <article>
-        <span>Unfortunately, this page is available in English only. If you have a question that is not answered in the list below, please contact me via <a href="mailto:lemonandrice@gmail.com">e-mail</a>.</span>
+        <span>Unfortunately, this page is available in English only. If you have a question that is not answered in the list below, please contact me via <a href="mailto:timtag1190@gmail.com">e-mail</a>.</span>
       </article>
 
       <article>
